# biohackbot

./: .gitignore  .gitleaks.toml  CONTRIBUTING.md  LICENSE  README.md  README.ru.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.githooks/: pre-push
deploy/: 02-rsync-corpus.sh  03-install-skill-on-vps.sh  04-configure-biohack-telegram.sh  05-install-biohack-workspace.sh  06-weekly-goals-telegram.sh  07-install-reminder-cron.sh  09-install-biohack-ingest-bot.sh  10-harden-openclaw-gateway.sh  RUNBOOK.md  biohack-ingest-bot.env.example  biohack-openclaw.env.example  biohack-reminder.env.example  deploy-bot.sh  openclaw.env.example  requirements-biohack-ingest.txt
docs/: ARCHITECTURE.md  CORPUS.md  LLM_GUIDE.md  LLM_GUIDE.ru.md  MED_BOTS_CORPUS_STANDARD.md  PARSERS.md  PARSERS.ru.md  REPO_DESCRIPTIONS.md
examples/: README.md
medbots/: __init__.py  bot_config.example.json  cli.py  config.py  corpus_io.py  corpus_writers.py  dedup_labs.py  extract_pdf_text.py  grok_ingest.py  import_apple_health.py  ingest_registry.py  init_instance.py  lab_source_lib.py  local_structure_pdfs.py  merge_labs_corpus.py  scan_sources.py  validate_apple_health.py  zip_safety.py
scripts/: check_safe_to_push.py
structured_database/: README.md
tests/: conftest.py  test_check_safe_to_push.py  test_corpus_io.py  test_dedup_labs.py  test_demo_instance.py  test_grok_ingest.py  test_import_apple_health.py  test_lab_source_lib.py  test_merge_labs_corpus.py  test_parse_emias.py  test_parse_gemotest.py  test_parse_medsi.py  test_validate_corpus.py  test_zip_safety.py
(+46 files in other folders)
