[project]
name = "medbots-core"
version = "0.1.0"
description = "Medical / biohacking corpus pipeline (public biohackbot framework)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Alexey Podobedov" }]
dependencies = [
    "PyMuPDF",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
medbots = "medbots.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["medbots"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
